manifests/log-pv.yaml
apiVersion: v1
kind: Pod
metadata:
  name: log-viewer
  namespace: nginx-ingress
spec:
  containers:
    - name: log-viewer
      image: busybox
      command: ["tail", "-f", "/var/log/app_protect_dos/dos.log"]
      volumeMounts:
        - name: log-volume
          mountPath: /var/log/app_protect_dos
  volumes:
    - name: log-volume
      persistentVolumeClaim:
        claimName: nginx-dos-logs
