manifests/nginx-ingress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress
  namespace: nginx-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-ingress
  template:
    metadata:
      labels:
        app: nginx-ingress
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9113"
    spec:
      serviceAccountName: nginx-ingress
      containers:
        - name: nginx-plus-ingress
          image: private-registry.nginx.com/nginx-ic-nap-dos/nginx-plus-ingress:4.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
            - name: readiness-port
              containerPort: 8081
            - name: prometheus
              containerPort: 9113
          readinessProbe:
            httpGet:
              path: /nginx-ready
              port: readiness-port
            periodSeconds: 1
          securityContext:
            allowPrivilegeEscalation: true
            runAsUser: 101
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
          args:
            - -nginx-plus
            - -nginx-configmaps=$(POD_NAMESPACE)/nginx-config
            - -mgmt-configmap=$(POD_NAMESPACE)/nginx-config-mgmt
            - -report-ingress-status
            - -external-service=nginx-ingress
            - -enable-app-protect
            - -enable-app-protect-dos
            - -enable-prometheus-metrics
            - -enable-service-insight
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: 1
              memory: 1Gi
          volumeMounts:
            - name: nginx-etc
              mountPath: /etc/nginx
            - name: nginx-cache
              mountPath: /var/cache/nginx
            - name: nginx-lib
              mountPath: /var/lib/nginx
            - name: nginx-log
              mountPath: /var/log/nginx
            - name: app-protect-log
              mountPath: /var/log/app_protect
            - name: app-protect-dos-log
              mountPath: /var/log/app_protect_dos
      imagePullSecrets:
        - name: regcred
      volumes:
        - name: nginx-etc
          emptyDir: {}
        - name: nginx-cache
          emptyDir: {}
        - name: nginx-lib
          emptyDir: {}
        - name: nginx-log
          emptyDir: {}
        - name: app-protect-log
          emptyDir: {}
        - name: app-protect-dos-log
          emptyDir: {}
