manifests/syslog-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: syslog-server
  namespace: nginx-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: syslog-server
  template:
    metadata:
      labels:
        app: syslog-server
    spec:
      containers:
        - name: syslog
          image: balabit/syslog-ng:latest
          ports:
            - containerPort: 514
            - containerPort: 601
---
apiVersion: v1
kind: Service
metadata:
  name: syslog-svc
  namespace: nginx-ingress
spec:
  ports:
    - port: 514
      targetPort: 514
      protocol: UDP
      name: syslog-udp
    - port: 601
      targetPort: 601
      protocol: TCP
      name: syslog-tcp
  selector:
    app: syslog-server
